Fix too much shadow in header

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -19,6 +19,15 @@
   min-height: 100%;
   margin: 0 10px;
   box-shadow: $box-shadow;
+
+  @media (min-width: 600px) {
+    max-width: 565px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: 861px) {
+    max-width: 800px;
+  }
 }
 
 .pointer {
@@ -32,6 +41,17 @@
   box-shadow: -9px 1px 6px 2px rgba($blue, 0.5);
   position: relative;
   display: inline-block;
+
+  &:before {
+    content: "";
+    position: absolute;
+    width: 27px;
+    height: 120%;
+    top: -10%;
+    left: -40px;
+    box-shadow: 0px 0px 10px 9px white;
+    background: white;
+  }
 
   &:after {
     content: "";
